--- a/index.html
+++ b/index.html
@@ -82,6 +82,72 @@
                 </div>
             </div>
         </section>
+        <section class="resume">
+            <h3 class="sume">A Sumary of My Resume</h3>
+            <div class="resume-container">
+                <div>
+                   <h3 class="edu">My Educatoin</h3>
+                   <div class="resume-iteam">
+                      <h4> Master in Computer Engineering</h4>
+                      <h5>Harvard University / 2015-2017</h5>
+                      <p>List skill/technologies here. You can change the icon above 
+                         to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                         commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-iteam">
+                        <h4> Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015-2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                           to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                           commodo ligula eget dolor.
+                          </p>
+                    </div>
+                    <hr>
+                    <div class="resume-iteam">
+                        <h4> Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015-2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                           to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                           commodo ligula eget dolor.
+                          </p>
+                    </div>
+                </div>
+                <div>
+                    <h3>My Exprerience</h3>
+                    <div class="resume-iteam">
+                        <h4> Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015-2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                           to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                           commodo ligula eget dolor.
+                          </p>
+                    </div>
+                    <hr>
+                    <div class="resume-iteam">
+                        <h4> Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015-2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                           to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                           commodo ligula eget dolor.
+                          </p>
+                      </div>
+                      <hr>
+                      <div class="resume-iteam">
+                        <h4> Master in Computer Engineering</h4>
+                        <h5>Harvard University / 2015-2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                           to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                           commodo ligula eget dolor.
+                          </p>
+                      </div>
+                </div>
+            </div>
+            <div class="btt">
+                <button class="botton">Dowload CV</button>
+            </div>
+        </section>
     </main>
     
 </body>
