--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/fbb0463375.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:ital,wght@0,100;0,300;1,200&family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
@@ -24,7 +25,7 @@
                 <h1 class="til">Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly 
                  he. Morning because as to society behaved moments</p>
-                 <button class="botton">Dwonload</button>
+                 <button class="botton"><i class="fa-solid fa-download"></i> Dwonload</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -145,7 +146,34 @@
                 </div>
             </div>
             <div class="btt">
-                <button class="botton">Dowload CV</button>
+                <button class="botton"><i class="fa-solid fa-download"></i> Dowload CV</button>
+            </div>
+        </section>
+        <section class="contract">
+            <div>
+                <h3>Let's Connect</h3>
+                <p class="prag">Please fill out the form on this section to contact with me or call between 
+                    9:00 A.M and 8.00 P.M ET, Monday through Friday.
+                </p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h3>Let's Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder=" Your Name"><br>
+                    <input type="email" name="" id placeholder=" Your Email"><br>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Massege"></textarea><br>
+                    <input class="botton" type="submit" value="Submit"><br>
+                </form>
+
             </div>
         </section>
     </main>
